--- a/appsscript.json
+++ b/appsscript.json
@@ -2,6 +2,9 @@
   "timeZone": "America/Mexico_City",
   "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "oauthScopes": [
+    "https://www.googleapis.com/auth/spreadsheets",
+    "https://www.googleapis.com/auth/drive.readonly"
+  ]
 }
-
